<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Login"
    android:orientation="vertical"
    android:backgroundTint="@color/papaya_whip">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:id="@+id/frag_login_et_username"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:id="@+id/frag_login_et_pass"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:id="@+id/frag_login_btn_login"/>

</LinearLayout>