<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:background="@color/papaya_whip"
    android:descendantFocusability="blocksDescendants"><!--Needed for on click-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:backgroundTint="@color/papaya_whip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_act_list_element_name_label"
            android:text="@string/naslov"
            android:textStyle="italic"
            android:textColor="@color/dark_slate_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_act_list_element_list_name_tv"
            android:text="@string/naslov1"
            android:textColor="@color/slate_gray"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:backgroundTint="@color/papaya_whip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_act_list_element_shared_label"
            android:text="@string/shared"
            android:textStyle="italic"
            android:textColor="@color/dark_slate_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_act_list_element_list_shared_tv"
            android:text="@string/false_boolean"
            android:textColor="@color/slate_gray"/>

    </LinearLayout>

</LinearLayout>