<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowListActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shared_shopping_list"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/papaya_whip"
        android:paddingTop="3sp"
        android:paddingBottom="3sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/naslov"
        android:textSize="20sp"
        android:paddingTop="5sp"
        android:id="@+id/show_list_act_title_tv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/show_list_act_et"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/add"
            android:id="@+id/show_list_act_btn"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show_list_act_list"/>

</LinearLayout>